fix: aria label

--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@
                                 <span>estrategia de marcas y comunicación.</span>
                             </p>
                             <div class="who_are__footer">
-                                <button class="who_are__button" type="button">Conocer +</button>
+                                <button class="who_are__button" type="button" aria-label="Conocer +">Conocer +</button>
                             </div>
                         </div>
                         <div class="who_are__content">
@@ -1255,7 +1255,7 @@
                                 Vicepresidente en los períodos 2003-2007 y 2011-2013
                                 Premio al Estilo Profesional de la Universidad de Palermo en 2012.</p>
                             <div class="who_are__footer who_are__hidden">
-                                <button class="who_are__button" type="button">Ocultar </button>
+                                <button class="who_are__button" type="button" aria-label="Ocultar">Ocultar </button>
                             </div>
                         </div>
                     </div>
@@ -1274,7 +1274,7 @@
                             <p class="who_are__txt">Trend Forecaster</p>
                             <p class="who_are__txt">Curadora de Marcas</p>
                             <div class="who_are__footer">
-                                <button class="who_are__button" type="button">Conocer +</button>
+                                <button class="who_are__button" type="button" aria-label="Conocer +">Conocer +</button>
                             </div>
                         </div>
                         <div class="who_are__content">
@@ -1297,7 +1297,7 @@
                             <p>Desigh & Lifestyle, Retail, Foodie, Wellness, Innovation + AI,</p>
                             <p>Consumer Insights, Sustainable y Branding</p>
                             <div class="who_are__footer who_are__hidden">
-                                <button class="who_are__button" type="button">Ocultar </button>
+                                <button class="who_are__button" type="button" aria-label="Ocultar">Ocultar </button>
                             </div>
                         </div>
                     </div>
@@ -1314,7 +1314,8 @@
                             <div class="books_item">
                                 <img src="static/dist/images/books/2x/libro-5@2x.jpg" class="books_item__img"
                                     width="649" height="617" alt="book 1" title="book 1" loading="lazy">
-                                <button type="button" class="books_item__btn" data-lightbox data-index="1">
+                                <button type="button" class="books_item__btn" aria-label="Ver libro" data-lightbox
+                                    data-index="1">
                                     <svg height="54" width="54" data-name="Capa 2" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 54.52 54.52">
                                         <path d="M27.26 0v54.52m27.26-27.26H0"
@@ -1346,7 +1347,8 @@
                             <div class="books_item">
                                 <img src="static/dist/images/books/2x/libro-4@2x.jpg" class="books_item__img"
                                     width="649" height="617" alt="book 1" title="book 1" loading="lazy">
-                                <button type="button" class="books_item__btn" data-lightbox data-index="2">
+                                <button type="button" class="books_item__btn" aria-label="Ver libro" data-lightbox
+                                    data-index="2">
                                     <svg height="54" width="54" data-name="Capa 2" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 54.52 54.52">
                                         <path d="M27.26 0v54.52m27.26-27.26H0"
@@ -1373,7 +1375,8 @@
                             <div class="books_item">
                                 <img src="static/dist/images/books/2x/libro-3@2x.jpg" class="books_item__img"
                                     width="649" height="617" alt="book 1" title="book 1" loading="lazy">
-                                <button type="button" class="books_item__btn" data-lightbox data-index="3">
+                                <button type="button" class="books_item__btn" aria-label="Ver libro" data-lightbox
+                                    data-index="3">
                                     <svg height="54" width="54" data-name="Capa 2" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 54.52 54.52">
                                         <path d="M27.26 0v54.52m27.26-27.26H0"
@@ -1400,7 +1403,8 @@
                             <div class="books_item">
                                 <img src="static/dist/images/books/2x/libro-2@2x.jpg" class="books_item__img"
                                     width="649" height="617" alt="book 1" title="book 1" loading="lazy">
-                                <button type="button" class="books_item__btn" data-lightbox data-index="4">
+                                <button type="button" class="books_item__btn" aria-label="Ver libro" data-lightbox
+                                    data-index="4">
                                     <svg height="54" width="54" data-name="Capa 2" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 54.52 54.52">
                                         <path d="M27.26 0v54.52m27.26-27.26H0"
@@ -1427,7 +1431,8 @@
                             <div class="books_item">
                                 <img src="static/dist/images/books/2x/libro-1@2x.jpg" class="books_item__img"
                                     width="649" height="617" alt="book 1" title="book 1" loading="lazy">
-                                <button type="button" class="books_item__btn" data-lightbox data-index="5">
+                                <button type="button" class="books_item__btn" aria-label="Ver libro" data-lightbox
+                                    data-index="5">
                                     <svg height="54" width="54" data-name="Capa 2" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 54.52 54.52">
                                         <path d="M27.26 0v54.52m27.26-27.26H0"
