--- a/index.html
+++ b/index.html
@@ -233,8 +233,9 @@
 
                                 <div class="item_how__content">
                                     <p>¿Cómo nos perciben? ¿Cuáles son los puntos del dolor? ¿Qué activos estratégicos
-                                        nos sostienen? ¿Cuál es nuestro Core Target? ¿Hasta qué punto se decodifica la
-                                        propuesta de valor? </p>
+                                        nos sostienen? </p>
+                                    <p>¿Cuál es nuestro Core Target? ¿Hasta qué punto se decodifica la
+                                        propuesta de valor?</p>
                                     <p>¿La comunicación está interpelando al core target? </p>
                                     <p>¿Qué tan coherente y consistente es la identidad de marca? </p>
                                 </div>
