feat: se agrega anim de header

--- a/index.html
+++ b/index.html
@@ -1731,13 +1731,15 @@
     </div>
 
 
-    <script src="static/dist/js/Home-min.js"></script>
+    <!-- <script src="static/dist/js/Home-min.js"></script> -->
 
 
-    <!-- <script src="static/src/js/plugins/swiper-bundle.min.js"></script>
+
+    <script src="static/src/js/plugins/swiper-bundle.min.js"></script>
+    <script src="static/src/js/partials/Header.js"></script>
     <script src="static/src/js/partials/WhoWeAre.js"></script>
     <script src="static/src/js/partials/Lightbox.js"></script>
-    <script src="static/src/js/partials/Sliders.js"></script> -->
+    <script src="static/src/js/partials/Sliders.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('service-worker.js')
