feat: se agregan links

--- a/index.html
+++ b/index.html
@@ -1505,8 +1505,9 @@
                                 <div class="interview__info">
                                     <h3 class="interview__subtitle">El año que viene la inflación
                                         no va a bajar de 50%</h3>
-                                    <a href="#" class="interview__lkn" title="Ver video" target="_blank"
-                                        title="Ver video" rel="noopener noreferrer">Ver video</a>
+                                    <a href="https://www.youtube.com/watch?v=hGY5ulZAIkY" class="interview__lkn"
+                                        target="_blank" title="Ver video" target="_blank" title="Ver video"
+                                        rel="noopener noreferrer">Ver video</a>
                                 </div>
                             </div>
                         </div>
@@ -1520,8 +1521,9 @@
                                 <span class="interview__date">17/10/23</span>
                                 <div class="interview__info">
                                     <h3 class="interview__subtitle">La sociedad sabe que el ajuste es inevitable</h3>
-                                    <a href="#" class="interview__lkn" title="Ver video" target="_blank"
-                                        title="Ver video" rel="noopener noreferrer">Ver video</a>
+                                    <a href="https://www.youtube.com/watch?v=4aUAThGkQRI" class="interview__lkn"
+                                        target="_blank" title="Ver video" target="_blank" title="Ver video"
+                                        rel="noopener noreferrer">Ver video</a>
                                 </div>
                             </div>
                         </div>
@@ -1536,38 +1538,9 @@
                                     <h3 class="interview__subtitle">21 Retail Day
                                         <span>Consultora W</span>
                                     </h3>
-                                    <a href="#" class="interview__lkn" title="Ver video" target="_blank"
-                                        title="Ver video" rel="noopener noreferrer">Ver video</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="interview__item">
-                                <figure class="interview__figure">
-                                    <img src="static/dist/images/videos/2x/video-4@2x.webp" class="interview__img"
-                                        width="709" alt="La sociedad sabe que el ajuste es inevitable"
-                                        title="La sociedad sabe que el ajuste es inevitable" loading="lazy">
-                                </figure>
-                                <span class="interview__date">17/10/23</span>
-                                <div class="interview__info">
-                                    <h3 class="interview__subtitle">La sociedad sabe que el ajuste es inevitable</h3>
-                                    <a href="#" class="interview__lkn" title="Ver video" target="_blank"
-                                        title="Ver video" rel="noopener noreferrer">Ver video</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="interview__item">
-                                <figure class="interview__figure">
-                                    <img src="static/dist/images/videos/2x/video-5@2x.webp" class="interview__img"
-                                        width="709" alt="21 Retail Day Consultora W" title="21 Retail Day Consultora W"
-                                        loading="lazy">
-                                </figure>
-                                <span class="interview__date">21/06/23</span>
-                                <div class="interview__info">
-                                    <h3 class="interview__subtitle">E21 Retail Day <span>Consultora W</span></h3>
-                                    <a href="#" class="interview__lkn" title="Ver video" target="_blank"
-                                        title="Ver video" rel="noopener noreferrer">Ver video</a>
+                                    <a href="https://www.youtube.com/watch?v=SolGs3otlI0" class="interview__lkn"
+                                        target="_blank" title="Ver video" target="_blank" title="Ver video"
+                                        rel="noopener noreferrer">Ver video</a>
                                 </div>
                             </div>
                         </div>
@@ -1581,8 +1554,9 @@
                                 <span class="interview__date">10/01/24</span>
                                 <div class="interview__info">
                                     <h3 class="interview__subtitle">El análisis político de Guillermo Oliveto</h3>
-                                    <a href="#" class="interview__lkn" title="Ver video" target="_blank"
-                                        title="Ver video" rel="noopener noreferrer">Ver video</a>
+                                    <a href="https://www.youtube.com/watch?v=nLHNpmnsLz4" class="interview__lkn"
+                                        target="_blank" title="Ver video" target="_blank" title="Ver video"
+                                        rel="noopener noreferrer">Ver video</a>
                                 </div>
                             </div>
                         </div>
