--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@
                     </svg>
 
                 </a>
+
+                <button type="button" aria-label="open nav" class="header__toggle" data-togglenav>
+                    <svg width="48" height="32" viewBox="0 0 48 32" fill="none">
+                        <path
+                            d="M32.5497 16.4351H15.4503C15.2015 16.4351 15 16.2403 15 15.9998C15 15.7592 15.2015 15.5645 15.4503 15.5645H32.5497C32.7985 15.5645 33 15.7592 33 15.9998C33 16.2403 32.7985 16.4351 32.5497 16.4351Z"
+                            fill="#ffffff" stroke="#ffffff" />
+                        <path
+                            d="M32.5497 10.8707H15.4503C15.2015 10.8707 15 10.6759 15 10.4353C15 10.1948 15.2015 10 15.4503 10H32.5497C32.7985 10 33 10.1948 33 10.4353C33 10.6759 32.7985 10.8707 32.5497 10.8707Z"
+                            fill="#ffffff" stroke="#ffffff" />
+                        <path
+                            d="M32.5497 21.9996H15.4503C15.2015 21.9996 15 21.8048 15 21.5642C15 21.3237 15.2015 21.1289 15.4503 21.1289H32.5497C32.7985 21.1289 33 21.3237 33 21.5642C33 21.8048 32.7985 21.9996 32.5497 21.9996Z"
+                            fill="#ffffff" stroke="#ffffff" />
+                    </svg>
+                </button>
                 <nav class="header__nav">
                     <a href="#about" class="header__nav__a" title="¿Qué hacemos?" rel="noopener noreferrer">¿Qué
                         hacemos?</a>
@@ -1696,11 +1710,41 @@
         </div>
     </div>
 
+    <nav class="nav">
+        <button type="button" aria-label="close nav" class="nav__toggle" data-togglenav>
+            <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="nav__toggle">
+                <path
+                    d="M12.0002 10.6L16.2002 6.4C16.6002 6 17.2002 6 17.6002 6.4C18.0002 6.8 18.0002 7.4 17.6002 7.8L13.4002 12L17.6002 16.2C18.0002 16.6 18.0002 17.2 17.6002 17.6C17.2002 18 16.6002 18 16.2002 17.6L12.0002 13.4L7.8002 17.6C7.4002 18 6.8002 18 6.4002 17.6C6.0002 17.2 6.0002 16.6 6.4002 16.2L10.6002 12L6.3002 7.8C6.0002 7.4 6.0002 6.7 6.3002 6.3C6.7002 5.9 7.30019 5.9 7.70019 6.3L12.0002 10.6Z">
+                </path>
+            </svg>
+        </button>
+
+        <div class="nav__ul">
+
+            <a href="#about" class="nav__a" title="¿Qué hacemos?" rel="noopener noreferrer" data-togglenav>¿Qué
+                hacemos?</a>
+            <a href="#how" class="nav__a" title="¿Cómo lo hacemos?" rel="noopener noreferrer" data-togglenav>¿Cómo lo
+                hacemos?</a>
+            <a href="#believes" class="nav__a" title="¿En qué creemos?" rel="noopener noreferrer" data-togglenav>¿En
+                qué
+                creemos?</a>
+            <a href="#who_are" class="nav__a" title="¿Quiénes somos?" rel="noopener noreferrer" data-togglenav>¿Quiénes
+                somos?</a>
+            <a href="#books" class="nav__a" title="Libros. " rel="noopener noreferrer" data-togglenav>Libros. </a>
+        </div>
+
+
+
+
+
+    </nav>
+    <div class="nav__overlay" data-togglenav></div>
+
 
     <script src="static/dist/js/Home-min.js"></script>
+    <!-- <script src="static/src/js/partials/Header.js"></script> -->
 
     <!-- <script src="static/src/js/plugins/swiper-bundle.min.js"></script>
-    <script src="static/src/js/partials/Header.js"></script>
     <script src="static/src/js/partials/WhoWeAre.js"></script>
     <script src="static/src/js/partials/Lightbox.js"></script>
     <script src="static/src/js/partials/Sliders.js"></script> -->
