feat: se agrega video

--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@
             <div class="row ">
                 <span class="section_hero__title">SO WHAT?</span>
             </div>
+            <div class="section_hero__container">
+                <video class="section_hero__video" width="640" height="360" autoplay muted playsinline loop>
+                    <source src="static/dist/images/video/home.mp4" type="video/mp4">
+                    Tu navegador no soporta la etiqueta de video.
+                </video>
+            </div>
         </section>
 
         <!-- About -->
