--- a/index.html
+++ b/index.html
@@ -3087,6 +3087,261 @@
 								<div class="interview__item">
 									<figure class="interview__figure">
 										<img
+											src="static/dist/images/videos/finales/video-1.png"
+											class="interview__img"
+											width="709"
+											alt="Milei sacó efectos positivos de la experiencia Macri"
+											title="Milei sacó efectos positivos de la experiencia Macri"
+											loading="lazy" />
+									</figure>
+									<span class="interview__date">24/05/24</span>
+									<div class="interview__info">
+										<h3 class="interview__subtitle">
+											Milei sacó efectos positivos de la experiencia Macri
+										</h3>
+										<a
+											href="https://www.youtube.com/watch?v=zBqoO4rmueA"
+											class="interview__lkn"
+											target="_blank"
+											title="Ver video"
+											target="_blank"
+											title="Ver video"
+											rel="noopener noreferrer">
+											Ver video
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="interview__item">
+									<figure class="interview__figure">
+										<img
+											src="static/dist/images/videos/finales/video-2.png"
+											class="interview__img"
+											width="709"
+											alt="Hay un índice de confianza como el del 2001"
+											title="Hay un índice de confianza como el del 2001"
+											loading="lazy" />
+									</figure>
+									<span class="interview__date">12/06/21</span>
+									<div class="interview__info">
+										<h3 class="interview__subtitle">
+											Hay un índice de confianza como el del 2001
+										</h3>
+										<a
+											href="https://www.youtube.com/watch?v=56FwXnPpxkA"
+											class="interview__lkn"
+											target="_blank"
+											title="Ver video"
+											target="_blank"
+											title="Ver video"
+											rel="noopener noreferrer">
+											Ver video
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="interview__item">
+									<figure class="interview__figure">
+										<img
+											src="static/dist/images/videos/finales/video-3.png"
+											class="interview__img"
+											width="709"
+											alt="Hay una recesión con ilusión"
+											title="Hay una recesión con ilusión"
+											loading="lazy" />
+									</figure>
+									<span class="interview__date">26/02/24</span>
+									<div class="interview__info">
+										<h3 class="interview__subtitle">
+											Hay una recesión con ilusión
+										</h3>
+										<a
+											href="https://www.youtube.com/watch?v=BYzxHlmv-jU"
+											class="interview__lkn"
+											target="_blank"
+											title="Ver video"
+											target="_blank"
+											title="Ver video"
+											rel="noopener noreferrer">
+											Ver video
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="interview__item">
+									<figure class="interview__figure">
+										<img
+											src="static/dist/images/videos/finales/video-4.png"
+											class="interview__img"
+											width="709"
+											alt="Hablemos de Otra Cosa"
+											title="Hablemos de Otra Cosa"
+											loading="lazy" />
+									</figure>
+									<span class="interview__date">14/10/21</span>
+									<div class="interview__info">
+										<h3 class="interview__subtitle">Hablemos de Otra Cosa</h3>
+										<a
+											href="https://www.youtube.com/watch?v=PM_dMNa3EWU&list=PL0yzA5B4cXVpT5bPAXPpjq2Ak9-VBGS_l&index=20"
+											class="interview__lkn"
+											target="_blank"
+											title="Ver video"
+											target="_blank"
+											title="Ver video"
+											rel="noopener noreferrer">
+											Ver video
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="interview__item">
+									<figure class="interview__figure">
+										<img
+											src="static/dist/images/videos/finales/video-5.png"
+											class="interview__img"
+											width="709"
+											alt="Sólo una Vuelta Más"
+											title="Sólo una Vuelta Más"
+											loading="lazy" />
+									</figure>
+									<span class="interview__date">10/04/24</span>
+									<div class="interview__info">
+										<h3 class="interview__subtitle">Sólo una Vuelta Más</h3>
+										<a
+											href="https://www.youtube.com/watch?v=b_989IdPbyg"
+											class="interview__lkn"
+											target="_blank"
+											title="Ver video"
+											target="_blank"
+											title="Ver video"
+											rel="noopener noreferrer">
+											Ver video
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="interview__item">
+									<figure class="interview__figure">
+										<img
+											src="static/dist/images/videos/finales/video-6.png"
+											class="interview__img"
+											width="709"
+											alt="DEVALUADOS Y EN SHOCK"
+											title="DEVALUADOS Y EN SHOCK"
+											loading="lazy" />
+									</figure>
+									<span class="interview__date">15/08/23</span>
+									<div class="interview__info">
+										<h3 class="interview__subtitle">DEVALUADOS Y EN SHOCK</h3>
+										<a
+											href="https://www.youtube.com/watch?v=jfiQLA6IDZA"
+											class="interview__lkn"
+											target="_blank"
+											title="Ver video"
+											target="_blank"
+											title="Ver video"
+											rel="noopener noreferrer">
+											Ver video
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="interview__item">
+									<figure class="interview__figure">
+										<img
+											src="static/dist/images/videos/finales/video-7.png"
+											class="interview__img"
+											width="709"
+											alt="La clase media está sin proyectos ni ilusión"
+											title="La clase media está sin proyectos ni ilusión"
+											loading="lazy" />
+									</figure>
+									<span class="interview__date">01/06/23</span>
+									<div class="interview__info">
+										<h3 class="interview__subtitle">
+											La clase media está sin proyectos ni ilusión
+										</h3>
+										<a
+											href="https://www.youtube.com/watch?v=GMcpKbHRGiY"
+											class="interview__lkn"
+											target="_blank"
+											title="Ver video"
+											target="_blank"
+											title="Ver video"
+											rel="noopener noreferrer">
+											Ver video
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="interview__item">
+									<figure class="interview__figure">
+										<img
+											src="static/dist/images/videos/finales/video-8.png"
+											class="interview__img"
+											width="709"
+											alt="Contexto, humor social y consumo"
+											title="Contexto, humor social y consumo"
+											loading="lazy" />
+									</figure>
+									<span class="interview__date">01/09/22</span>
+									<div class="interview__info">
+										<h3 class="interview__subtitle">
+											Contexto, humor social y consumo
+										</h3>
+										<a
+											href="https://www.youtube.com/watch?v=Fl1kzVdRJBI"
+											class="interview__lkn"
+											target="_blank"
+											title="Ver video"
+											target="_blank"
+											title="Ver video"
+											rel="noopener noreferrer">
+											Ver video
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="interview__item">
+									<figure class="interview__figure">
+										<img
+											src="static/dist/images/videos/finales/video-9.png"
+											class="interview__img"
+											width="709"
+											alt="Real Life, Real Time: Consumo y Humor Social"
+											title="Real Life, Real Time: Consumo y Humor Social"
+											loading="lazy" />
+									</figure>
+									<span class="interview__date">26/10/23</span>
+									<div class="interview__info">
+										<h3 class="interview__subtitle">
+											Real Life, Real Time: Consumo y Humor Social
+										</h3>
+										<a
+											href="https://www.youtube.com/watch?v=KQbaSEB4_ow"
+											class="interview__lkn"
+											target="_blank"
+											title="Ver video"
+											target="_blank"
+											title="Ver video"
+											rel="noopener noreferrer">
+											Ver video
+										</a>
+									</div>
+								</div>
+							</div>
+							<!-- <div class="swiper-slide">
+								<div class="interview__item">
+									<figure class="interview__figure">
+										<img
 											src="static/dist/images/videos/2x/video-1@2x.webp"
 											class="interview__img"
 											width="709"
@@ -3201,7 +3456,7 @@
 										</a>
 									</div>
 								</div>
-							</div>
+							</div> -->
 						</div>
 						<div class="swiper-pagination pager"></div>
 					</div>
@@ -3483,13 +3738,13 @@
 			class="nav__overlay"
 			data-togglenav></div>
 
-		<!-- <script src="static/dist/js/Home-min.js"></script> -->
+		<script src="static/dist/js/Home-min.js"></script>
 		<!-- <script src="static/src/js/partials/Header.js"></script> -->
 
-		<script src="static/src/js/plugins/swiper-bundle.min.js"></script>
+		<!-- <script src="static/src/js/plugins/swiper-bundle.min.js"></script>
 		<script src="static/src/js/partials/WhoWeAre.js"></script>
 		<script src="static/src/js/partials/Lightbox.js"></script>
-		<script src="static/src/js/partials/Sliders.js"></script>
+		<script src="static/src/js/partials/Sliders.js"></script> -->
 		<script>
 			if ('serviceWorker' in navigator) {
 				navigator.serviceWorker
