feat: cover imagen

--- a/index.html
+++ b/index.html
@@ -260,6 +260,11 @@
 										<span class="section_hero__title">SO WHAT?</span>
 									</div>
 									<img
+										alt="SO WHAT?"
+										title="SO WHAT?"
+										width="1921"
+										height="1078"
+										class="section_hero__img"
 										src="static/dist/images/hero/slider/Oliveto_W_Web_CARROUSEL-01.jpg" />
 								</div>
 								<div class="swiper-slide">
@@ -267,6 +272,11 @@
 										<span class="section_hero__title">WHAT?</span>
 									</div>
 									<img
+										alt="WHAT"
+										title="WHAT"
+										width="1921"
+										height="1078"
+										class="section_hero__img"
 										src="static/dist/images/hero/slider/Oliveto_W_Web_CARROUSEL-02.jpg" />
 								</div>
 								<div class="swiper-slide">
@@ -274,6 +284,11 @@
 										<span class="section_hero__title">WHY?</span>
 									</div>
 									<img
+										alt="WHY"
+										title="WHY"
+										width="1921"
+										height="1078"
+										class="section_hero__img"
 										src="static/dist/images/hero/slider/Oliveto_W_Web_CARROUSEL-03.jpg" />
 								</div>
 								<div class="swiper-slide">
@@ -281,6 +296,11 @@
 										<span class="section_hero__title">WHO?</span>
 									</div>
 									<img
+										alt="WHO"
+										title="WHO"
+										width="1921"
+										height="1078"
+										class="section_hero__img"
 										src="static/dist/images/hero/slider/Oliveto_W_Web_CARROUSEL-04.jpg" />
 								</div>
 								<div class="swiper-slide">
@@ -288,6 +308,11 @@
 										<span class="section_hero__title">WHERE?</span>
 									</div>
 									<img
+										alt="WHERE"
+										title="WHERE"
+										width="1921"
+										height="1078"
+										class="section_hero__img"
 										src="static/dist/images/hero/slider/Oliveto_W_Web_CARROUSEL-05.jpg" />
 								</div>
 								<div class="swiper-slide">
@@ -295,6 +320,11 @@
 										<span class="section_hero__title">WHEN?</span>
 									</div>
 									<img
+										alt="WHEN"
+										title="WHEN"
+										width="1921"
+										height="1078"
+										class="section_hero__img"
 										src="static/dist/images/hero/slider/Oliveto_W_Web_CARROUSEL-06.jpg" />
 								</div>
 							</div>
