--- a/index.html
+++ b/index.html
@@ -3769,12 +3769,13 @@
 			data-togglenav></div>
 
 		<script src="static/dist/js/Home-min.js"></script>
-		<!-- <script src="static/src/js/partials/Header.js"></script> -->
-
-		<!-- <script src="static/src/js/plugins/swiper-bundle.min.js"></script>
+		<!--
+		<script src="static/src/js/partials/Header.js"></script>
+		<script src="static/src/js/plugins/swiper-bundle.min.js"></script>
 		<script src="static/src/js/partials/WhoWeAre.js"></script>
 		<script src="static/src/js/partials/Lightbox.js"></script>
-		<script src="static/src/js/partials/Sliders.js"></script> -->
+		<script src="static/src/js/partials/Sliders.js"></script>
+		 -->
 		<script>
 			if ('serviceWorker' in navigator) {
 				navigator.serviceWorker
